selects for time fields

--- a/app/blocks/form-box/form-box.scss
+++ b/app/blocks/form-box/form-box.scss
@@ -4,6 +4,8 @@
   display: block;
   width: 100%;
   position: relative;
+  line-height: 0;
+  font-size: 0;
 
   &__label {
     @include text-big;
