--- a/app/blocks/form-elements/form-selects.scss
+++ b/app/blocks/form-elements/form-selects.scss
@@ -840,6 +840,39 @@
     &.is-item-select #{$k}__list--single {
       border-color: $color-basic;
     }
+
+    &_underline-light {
+      #{$k} {
+
+        &__list--single {
+          border-color: $color-border-light;
+        }
+      }
+
+      &.is-item-select {
+        #{$k} {
+          &__list--single {
+            border-color: $color-border-light;
+          }
+        }
+      }
+    }
+
+    &_normal {
+      #{$k} {
+        &__inner {
+          font-weight: 400;
+        }
+      }
+
+      &.is-item-select {
+        #{$k} {
+          &__inner{
+            font-weight: 400;
+          }
+        }
+      }
+    }
   }
 
   &_input2 {
@@ -1038,6 +1071,16 @@
             }
           }
         }
+      }
+    }
+  }
+
+  &_notoggle {
+
+    #{$k} {
+
+      &__toggle {
+        display: none;
       }
     }
   }
