--- a/app/components/form-order-summary/form-order-summary.pug
+++ b/app/components/form-order-summary/form-order-summary.pug
@@ -78,6 +78,9 @@ mixin form-order-summary(editable)
             +e.B.item_bold 16:30
     div.form-order-summary__section
       +info-editable.__line
+        +info-editable-name Cancellation period
+        +info-editable-field 48 hours
+      +info-editable.__line
         +info-editable-name Price:
         - if (editable) {
           +info-editable-field
@@ -200,6 +203,9 @@ mixin form-order-summary-mobile(editable)
                 +e.SPAN.item 26 May 2019
                 +e.B.item_bold 16:30
         div.form-order-summary__section
+          +info-editable.__line
+            +info-editable-name Cancellation period
+            +info-editable-field 48 hours
           +info-editable.__line
             +info-editable-name Price:
             - if (editable) {
