--- a/app/components/pivot-table/pivot-table.pug
+++ b/app/components/pivot-table/pivot-table.pug
@@ -56,6 +56,9 @@ mixin pivot-table(time)
       +characteristics-table._normal._large._dark._pivot.__table
         body
           +e.TR.row
+            +e.TD.cell_dark Cancellation period
+            +e.TD.cell 48 hours
+          +e.TR.row
             +e.TD.cell_dark Object type
             +e.TD.cell Dedicated Desk
           +e.TR.row
