--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -151,6 +151,7 @@ include ../blocks/uploader-output/uploader-output
 include ../blocks/uploader/uploader
 include ../blocks/user-link/user-link
 include ../blocks/warning/warning
+include ../components/404/404
 include ../components/advanced-filter/advanced-filter
 include ../components/breadcrumbs-box/breadcrumbs-box
 include ../components/compact-filter/compact-filter
