--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -60,7 +60,8 @@ block content
         +link(href="profile-kyc-states3.html") Profile | KYC - UBO refused (profile-kyc-states3.html)
         +link(href="system.html") Space pool - system messages (system.html)
         +link(href="policy.html") Space pool - Privacy policy (policy.html)
-        +link(href="order-summary-time.html") Order summary with time (order-summary-time.html)
+        +link(href="order-summary-time.html") Space pool - Order summary with time (order-summary-time.html)
+        +link(href="404.html") Space pool - 404 (404.html)
 
       +page-title._small Попапы
       +e.list
