--- a/app/components/popup-add-offer-tc/popup-add-offer-tc.pug
+++ b/app/components/popup-add-offer-tc/popup-add-offer-tc.pug
@@ -42,7 +42,7 @@ mixin popup-add-offer-tc()
               //-           +check-input Per Half a day
               //-         +form-section-wrapper._mg29
               //-           +check-input Per day
-              +col({xl: 6, sm: 12})(data-form-element="hotFixedOffice")
+              +col({xl: 6, sm: 12})
                 +e.field
                   +form-section-wrapper._negative-mg.__count
                     +form-box('Price ', '', '', '&pound;')._icon_left
@@ -58,7 +58,7 @@ mixin popup-add-offer-tc()
                         option(value="per week") Per Week
                         option(value="per month") Per Month
                         option(value="per year") Per Year
-              +col({xl: 6, sm: 12})(data-form-element="hotFixedOffice")
+              +col({xl: 6, sm: 12})
                 +form-section-wrapper._negative-mg
                   +form-box('Deposit', '', '', '&pound;')._icon_left
                     +input(type="text" placeholder="Deposit", value='0.2')
