--- a/app/components/popup-add-offer/popup-add-offer.pug
+++ b/app/components/popup-add-offer/popup-add-offer.pug
@@ -28,7 +28,7 @@ mixin popup-add-offer()
                   +form-box('Offer Description')
                     +input(type="text" name="offerDescription" placeholder="Offer Description" required)
                   +form-section-text._light Any information, rules, restrictions and additional features for this offer
-              +col({xl: 6, sm: 12})(data-form-element="hotFixedOffice")
+              +col({xl: 6, sm: 12})
                 +e.field
                   +form-section-wrapper._negative-mg.__count
                     +form-box('Price ', '', '', '&pound;')._icon_left
@@ -44,7 +44,7 @@ mixin popup-add-offer()
                         option(value="per week") Per Week
                         option(value="per month") Per Month
                         option(value="per year") Per Year
-              +col({xl: 6, sm: 12})(data-form-element="hotFixedOffice")
+              +col({xl: 6, sm: 12})
                 +form-section-wrapper._negative-mg
                   +form-box('Deposit', '', '', '&pound;')._icon_left
                     +input(type="text" placeholder="Deposit", value='0.2')
