--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -68,7 +68,7 @@
     border-bottom-color: $color-border-light;
   }
 
-  .is-top & {
+  .is-top > & {
     border-bottom-color: $color-basic;
 
     &_underline-light {
@@ -76,7 +76,7 @@
     }
   }
 
-  .is-error & {
+  .is-error > & {
     border-bottom-color: $color-error;
   }
 }
