--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -2068,6 +2068,7 @@
     width: 100%;
     box-sizing: border-box;
     color: $color-placeholder;
+    padding-top: 5px;
     padding-bottom: 8px;
 
     @include screen('sm') {
