--- a/app/components/popup-add-offer/popup-add-offer.pug
+++ b/app/components/popup-add-offer/popup-add-offer.pug
@@ -48,7 +48,7 @@ mixin popup-add-offer()
                     +e.imitation(data-form-element="meetingRoom") Per Hour
                       +input(type="hidden" name="pricePeriod" value="per hour")
               +col({xl: 6, sm: 12})
-                +form-section-wrapper._negative-mg
+                +form-section-wrapper._negative-mg(data-form-element="hotFixedOffice")
                   +form-box('Deposit', '', '', '&pound;')._icon_left
                     +input(type="text" placeholder="Deposit", value='0.2')
               +col({xl: 6, sm: 12})
