--- a/app/components/popup-add-offer-tc/popup-add-offer-tc.pug
+++ b/app/components/popup-add-offer-tc/popup-add-offer-tc.pug
@@ -63,7 +63,7 @@ mixin popup-add-offer-tc()
                       +input(type="hidden" name="pricePeriod" value="per hour")
                         option(value="per year") Per Year
               +col({xl: 6, sm: 12})
-                +form-section-wrapper._negative-mg
+                +form-section-wrapper._negative-mg(data-form-element="hotFixedOffice")
                   +form-box('Deposit', '', '', '&pound;')._icon_left
                     +input(type="text" placeholder="Deposit", value='0.2')
               +col({xl: 6, sm: 12})
