--- a/app/pages/account-settings/account-settings.pug
+++ b/app/pages/account-settings/account-settings.pug
@@ -76,7 +76,7 @@ block content
                 +col({xl: 6, md:12 })
                   +form-section-wrapper
                     +form-box('Birthday', 'calendar2')._icon
-                      +input.js-datepicker(type="text" name="birthday" value="31 August 1986" placeholder="Birthday" data-mindate='')
+                      +input.js-datepicker(type="text" name="birthday" value="31 August 1986" placeholder="Birthday" data-mindate='all')
                 +col({xl: 6, md:12 })
                   +form-section-wrapper
                     +form-box('Residency country')
