--- a/app/pages/profile/profile-kyc.pug
+++ b/app/pages/profile/profile-kyc.pug
@@ -62,7 +62,7 @@ block content
                     +col({xl: 2, md:4, sm: 9 })
                       +form-section-wrapper
                         +form-box('Date of birth', 'calendar2')._icon
-                          +input.js-datepicker(type="text" name="ubo-1[birthDate]" placeholder="Date of birth" readonly="readonly" data-mindate='')
+                          +input.js-datepicker(type="text" name="ubo-1[birthDate]" placeholder="Date of birth" readonly="readonly" data-mindate='all')
                     +col({xl: 2, md:5, sm: 9 })
                       +form-section-wrapper
                         +form-box('Nationality')
