--- a/app/pages/signup-host-info/signup-guest-info.pug
+++ b/app/pages/signup-host-info/signup-guest-info.pug
@@ -67,7 +67,7 @@ block content
                 +col({xl: 6, md:12 })
                   +form-section-wrapper
                     +form-box('Date of birth', 'calendar2')._icon
-                      +input.js-datepicker(type="text" name="birthDate" placeholder="Date of birth" readonly="readonly" data-mindate='')
+                      +input.js-datepicker(type="text" name="birthDate" placeholder="Date of birth" readonly="readonly" data-mindate='all')
                 +col({xl: 3, md:6, sm: 12 })
                   +form-section-wrapper
                     +form-box('Nationality')
@@ -155,7 +155,7 @@ block content
                 +col({xl: 6, md:12 })
                   +form-section-wrapper
                     +form-box('Date of birth', 'calendar2')._icon
-                      +input.js-datepicker(type="text" name="birthDate" placeholder="Date of birth" readonly="readonly" data-mindate='')
+                      +input.js-datepicker(type="text" name="birthDate" placeholder="Date of birth" readonly="readonly" data-mindate='all')
                 +col({xl: 3, md:6, sm: 12 })
                   +form-section-wrapper
                     +form-box('Nationality')
