--- a/app/blocks/scrollbar/scrollbar.scss
+++ b/app/blocks/scrollbar/scrollbar.scss
@@ -36,6 +36,10 @@ $scrollbar-vertical-handle-transition: background-color .3s;
 //scrollbar corner
 $scrollbar-corner-background-color: transparent;
 
+.fancybox-container .os-scrollbar-vertical, .fancybox .os-scrollbar-horizontal {
+  box-sizing: content-box !important;
+}
+
 .#{$theme-name} > .os-scrollbar-horizontal {
   right: $scrollbar-vertical-size + ($scrollbar-vertical-padding * 2);
   height: $scrollbar-horizontal-size;
