--- a/app/components/popup-document/popup-document.scss
+++ b/app/components/popup-document/popup-document.scss
@@ -176,4 +176,47 @@
     width: 100%;
     transform-origin: 50% 0 0;
   }
+
+  &_agreement {
+    #{$b} {
+
+      &__column {
+
+        &_right {
+          margin-top: 0;
+        }
+      }
+
+      &__status {
+        height: auto;
+        padding-bottom: 38px;
+
+        @include screen('sm') {
+          padding-bottom: 25px;
+        }
+      }
+
+      &__inner-content {
+        padding: 135px 68px 120px;
+
+        @include screen('md') {
+          padding: 90px 40px 80px;
+        }
+
+        @include screen('sm') {
+          padding: 60px 10px;
+        }
+      }
+    }
+
+    .popup {
+
+      &__header {
+
+        &_fx {
+          padding: 28px 70px 30px;
+        }
+      }
+    }
+  }
 }
