--- a/app/blocks/content-zone/content-zone.scss
+++ b/app/blocks/content-zone/content-zone.scss
@@ -339,6 +339,12 @@
     line-height: 1.2;
     font-weight: 400;
 
+    @include screen('sm') {
+      @include text15;
+
+      line-height: 1.2;
+    }
+
     p {
       &:not(:last-child) {
         margin-bottom: 22px;
@@ -360,10 +366,18 @@
 
       &:not(:first-child) {
         margin-top: 61px;
+
+        @include screen('sm') {
+          margin-top: 40px;
+        }
       }
 
       &:not(:last-child) {
-        margin-bottom: 30px;
+        margin-bottom: 52px;
+
+        @include screen('sm') {
+          margin-bottom: 40px;
+        }
       }
 
       li {
