--- a/app/blocks/contract-status/contract-status.pug
+++ b/app/blocks/contract-status/contract-status.pug
@@ -55,4 +55,20 @@ mixin contract-status(data)
         +e.text Download contract PDF
         +icon('download').__icon_arrow
       +link()(href="#")._gray-dark._underline.__terminate Terminate the contract
+    if data.agrstage1
+      +e.FORM.__form
+        +e.line
+          +b.LABEL.checkbox_white._fz17._top
+            +e.INPUT.input(name="agree" value="1" type="checkbox" data-checker="agreement" checked)
+            +e.SPAN.box
+              +icon('check').__icon
+            +e.SPAN.content A have read and agree with House Rules.
+        +e.line(data-checker-target="agreement" data-form-element="agreement")
+          +button('button')(type="submit")._short.__button_wide Continue
+    if data.agrstage2
+      +e.table
+        +e.row
+          +e.cell_head!= data.agrstage2.name
+          +e.cell
+            +state()._check.__state!= data.agrstage2.status
     block
