--- a/app/blocks/contract-status/contract-status.scss
+++ b/app/blocks/contract-status/contract-status.scss
@@ -273,4 +273,29 @@
       margin-top: 0;
     }
   }
+
+  &__form {
+    display: block;
+    width: 100%;
+  }
+
+  &__line {
+    display: block;
+    width: 100%;
+
+    &:not(:last-child) {
+      margin-bottom: 36px;
+
+      @include screen('sm') {
+        margin-bottom: 20px;
+      }
+    }
+  }
+
+  &__button {
+
+    &_wide {
+      width: 100%;
+    }
+  }
 }
