--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -174,6 +174,7 @@ include ../components/pivot-table/pivot-table
 include ../components/policy/policy
 include ../components/popup-add-offer-tc/popup-add-offer-tc
 include ../components/popup-add-offer/popup-add-offer
+include ../components/popup-agreement/popup-agreement
 include ../components/popup-arrange-viewing/popup-arrange-viewing
 include ../components/popup-cancel-request/popup-cancel-request
 include ../components/popup-cancellation/popup-cancellation
