pages for terms and conditions

--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -62,6 +62,8 @@ block content
         +link(href="policy.html") Space pool - Privacy policy (policy.html)
         +link(href="order-summary-time.html") Space pool - Order summary with time (order-summary-time.html)
         +link(href="404.html") Space pool - 404 (404.html)
+        +link(href="deal-passport-agreement1.html") SpacePool - Deal Passport for Terms and Conditions (deal-passport-agreement1.html)
+        +link(href="deal-passport-agreement2.html") SpacePool - Deal Passport for Terms and Conditions (deal-passport-agreement2.html)
 
       +page-title._small Попапы
       +e.list
