--- a/app/blocks/status-button/status-button.scss
+++ b/app/blocks/status-button/status-button.scss
@@ -39,9 +39,11 @@
 
   .state {
     line-height: 1.2;
+    min-height: 19px;
 
     @include screen('sm') {
       line-height: 1.2;
+      min-height: 14px;
     }
   }
 
