--- a/app/pages/deal-passport/deal-passport-agreement1.pug
+++ b/app/pages/deal-passport/deal-passport-agreement1.pug
@@ -33,8 +33,8 @@ block content
                   +state()._right._check._light Confirmed
                 +status-button({name: 'Terms and Conditions', status: true}).__state.js-popup-depends-width(href="#" data-source="xl:#popup-agreement,md:#popup-agreement-m")
                   +state()._right._orange._light Please read
-                +status-button({name: 'Payment', status: true}).is-disabled.__state.js-popup-top(href="#popup-payment-form")
-                  +state()._right._light N/A
+                +status-button({name: 'Payment required', status: true}).is-disabled.__state.js-popup-top(href="#popup-payment-form")
+                  +state()._right._light
         +content-column-main._no-ptop.hide-md
           +table-head._messages._borders
             +e.wrapper
