--- a/app/pages/deal-passport/deal-passport-agreement2.pug
+++ b/app/pages/deal-passport/deal-passport-agreement2.pug
@@ -33,8 +33,8 @@ block content
                   +state()._right._check._light Confirmed
                 +status-button({name: 'Terms and Conditions', status: true}).__state.js-popup-depends-width(href="#" data-source="xl:#popup-agreement-accepted,md:#popup-agreement-accepted-m")
                   +state()._right._check._light Accepted
-                +status-button({name: 'Payment', status: true}).__state.js-popup-top(href="#popup-payment-form")
-                  +state()._right._orange._light <b>1</b> payment
+                +status-button({name: 'Payment required', status: true}).__state.js-popup-top(href="#popup-payment-form")
+                  +state()._right._orange._light
         +content-column-main._no-ptop.hide-md
           +table-head._messages._borders
             +e.wrapper
