--- a/app/blocks/slider/slider.scss
+++ b/app/blocks/slider/slider.scss
@@ -516,3 +516,12 @@
     }
   }
 }
+
+.js-slider-container {
+  opacity: 0;
+  transition: opacity $ease-main;
+
+  &.is-visible {
+    opacity: 1;
+  }
+}
