--- a/app/blocks/filter-select/filter-select.scss
+++ b/app/blocks/filter-select/filter-select.scss
@@ -84,12 +84,14 @@
       box-sizing: border-box;
       padding-top: 57px;
       padding-bottom: 56px;
+      visibility: hidden;
     }
 
     #{$b}.is-open & {
       @include screen('sm') {
         opacity: 1;
         pointer-events: auto;
+        visibility: visible;
       }
     }
   }
