--- a/app/blocks/filter-select/filter-select.scss
+++ b/app/blocks/filter-select/filter-select.scss
@@ -86,6 +86,7 @@
       padding-top: 57px;
       padding-bottom: 56px;
       visibility: hidden;
+      // transform: translate3d(100%, 0, 0);
       transition: opacity $ease-main, transform $ease-main;
       touch-action: none;
     }
@@ -96,6 +97,7 @@
         pointer-events: auto;
         touch-action: auto;
         visibility: visible;
+        // transform: translate3d(0, 0, 0);
       }
     }
   }
