--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -399,7 +399,9 @@
     }
 
     #{$b}.is-new & {
-      display: inline-block;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   }
 
