--- a/app/blocks/form-box/form-box.scss
+++ b/app/blocks/form-box/form-box.scss
@@ -310,21 +310,27 @@
     display: flex;
     justify-content: flex-start;
 
-    &::before {
-      @include pseudo;
+    // &::before {
+    //   @include pseudo;
 
-      bottom: 12px;
-      left: 42px;
-      width: 1px;
-      height: 18px;
-      background-color: $color-form-border;
-      opacity: 0;
-      transition: opacity $ease-main;
-      pointer-events: none;
-    }
+    //   bottom: 12px;
+    //   left: 42px;
+    //   width: 1px;
+    //   height: 18px;
+    //   background-color: $color-form-border;
+    //   opacity: 0;
+    //   transition: opacity $ease-main;
+    //   pointer-events: none;
+    // }
 
-    &.is-top::before {
-      opacity: 1;
+    // &.is-top::before {
+    //   opacity: 1;
+    // }
+
+    &.is-top input {
+      &::placeholder {
+        // color: $color-placeholder;
+      }
     }
   }
 
