--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -7,7 +7,8 @@
   width: 100%;
   box-sizing: border-box;
   border-radius: 0;
-  color: $color-basic;
+  color: $color-black;
+  // color: $color-basic;
   font-weight: 700;
   padding-top: 5px;
   padding-bottom: 8px;
@@ -57,7 +58,8 @@
   }
 
   &_dark {
-    color: $color-input-dark;
+    color: $color-black;
+    // color: $color-input-dark;
   }
 
   &_normal {
