--- a/app/blocks/form-elements/form-selects.scss
+++ b/app/blocks/form-elements/form-selects.scss
@@ -715,7 +715,8 @@
       width: 100%;
       box-sizing: border-box;
       border-radius: 0;
-      color: $color-basic;
+      // color: $color-basic;
+      color: $color-black;
       transition: color $ease-main;
       overflow: hidden;
       box-sizing: border-box;
@@ -823,7 +824,8 @@
 
     &.is-open {
       #{$k}__inner {
-        color: $color-basic;
+        color: $color-black;
+        // color: $color-basic;
       }
 
       #{$k}__list {
@@ -886,7 +888,8 @@
       width: 100%;
       box-sizing: border-box;
       border-radius: 0;
-      color: $color-basic;
+      color: $color-black;
+      // color: $color-basic;
       transition: color $ease-main;
       overflow: hidden;
 
@@ -989,7 +992,8 @@
 
     &.is-open {
       #{$k}__inner {
-        color: $color-basic;
+        color: $color-black;
+        // color: $color-basic;
       }
 
       #{$k}__list {
