--- a/app/pages/order-summary/order-summary.pug
+++ b/app/pages/order-summary/order-summary.pug
@@ -16,7 +16,7 @@ block content
         +col({ md:12, xl: 9}).hide-md
           +breadcrumbs(['Home', 'Search Results', 'Blooming Founder (formre Blooms...', 'Reservation request'])
   +content-origin._reverse._wide-lg._last
-    - var offers = getData('offer-select.json')
+    - var offers = getData('offer-select-single.json')
     .container
       +e.wrapper.js-compensate-wrap
         +content-column-aside
