--- a/app/pages/profile/profile.pug
+++ b/app/pages/profile/profile.pug
@@ -53,9 +53,9 @@ block content
                         option(value="fr") France
                 +col({xl: 6, md:12 }).grid__col_md-order2
                   +form-section-wrapper
-                    +form-box('Phone number', '', 'div')._phone
-                      +input(type="tel" name="phone-code" value="+44" placeholder="Phone code" data-tel-code).form-box__phone_code
-                      +input(type="tel" name="phone-number" value="768 968 98983" placeholder="Phone number" data-tel-number).form-box__phone_number
+                    +form-box('Phone number', '', 'label')
+                      //- +input(type="tel" name="phone-code" value="+44" placeholder="Phone code" data-tel-code).form-box__phone_code
+                      +input(type="tel" name="phone" value="+4476896898983" placeholder="Phone number" data-tel-number)
                 +col({xl: 6, md:12 })
                   +form-section-wrapper
                     +form-box('E-mail adress')
