fixes for messages

--- a/app/blocks/dialog/dialog.pug
+++ b/app/blocks/dialog/dialog.pug
@@ -212,12 +212,13 @@ mixin dialog2()
               +notification-title Payment required
             +notification-table._mt
               +e.TR.row
-                +e.TD.cell_w59
+                +e.TD.cell_w59._pd-sm
                   +short-info('Payment Subject:')
                     +e.text Monthly payment for January 2019
-                +e.TD.cell_w41
+                +e.TD.cell_w41._pd-sm
                   +short-info('Amount to pay:')
                     +e.text &pound; 560.90
+                    +e.note VAT included
             +notification-footer._tbl
               +e.buttons
                 +button()._border._border_bg-white._short._mob-smaller.__button View/Print Invoice
@@ -233,12 +234,13 @@ mixin dialog2()
               +notification-title Payment received
             +notification-table._mt
               +e.TR.row
-                +e.TD.cell_w59
+                +e.TD.cell_w59._pd-sm
                   +short-info('Payment Subject:')
                     +e.text Monthly payment for January 2019
-                +e.TD.cell_w41
+                +e.TD.cell_w41._pd-sm
                   +short-info('Amount to pay:')
                     +e.text &pound; 560.90
+                    +e.note VAT included
               +e.TR.row
                 +e.TD.cell_w59._ft
                   +short-info('Invoice number:')._mb15
@@ -611,12 +613,13 @@ mixin dialog3()
               +notification-title Payment required
             +notification-table._mt
               +e.TR.row
-                +e.TD.cell_w59
+                +e.TD.cell_w59._pd-sm
                   +short-info('Payment Subject:')
                     +e.text Monthly payment for January 2019
-                +e.TD.cell_w41
+                +e.TD.cell_w41._pd-sm
                   +short-info('Amount to pay:')
                     +e.text &pound; 560.90
+                    +e.note VAT included
             +notification-footer._tbl
               +e.buttons
                 +button()._border._border_bg-white._short._mob-smaller.__button View/Print Invoice
@@ -632,12 +635,13 @@ mixin dialog3()
               +notification-title Payment received
             +notification-table._mt
               +e.TR.row
-                +e.TD.cell_w59
+                +e.TD.cell_w59._pd-sm
                   +short-info('Payment Subject:')
                     +e.text Monthly payment for January 2019
-                +e.TD.cell_w41
+                +e.TD.cell_w41._pd-sm
                   +short-info('Amount to pay:')
                     +e.text &pound; 560.90
+                    +e.note VAT included
               +e.TR.row
                 +e.TD.cell_w59._ft
                   +short-info('Invoice number:')._mb15
