--- a/app/blocks/notification/notification.scss
+++ b/app/blocks/notification/notification.scss
@@ -684,6 +684,14 @@
       border-right: 1px solid $color-gray-light-2;
     }
 
+    &_pd-sm {
+      padding-bottom: 6px;
+
+      // @include screen('sm') {
+      //   padding-bottom: 8px;
+      // }
+    }
+
     &_w59 {
       width: 59%;
 
