--- a/app/blocks/short-info/short-info.scss
+++ b/app/blocks/short-info/short-info.scss
@@ -28,6 +28,28 @@
     }
   }
 
+  &__note {
+    @include text15;
+
+    display: block;
+    font-weight: 400;
+    width: auto;
+    text-align: right;
+    line-height: (20 / 15);
+    letter-spacing: -.02em;
+    margin-right: -15px;
+    margin-left: 0;
+
+    @include screen('sm') {
+      @include text10;
+
+      line-height: (20 / 10);
+      letter-spacing: -.02em;
+      margin-right: 0;
+      margin-left: 0;
+    }
+  }
+
   &__text {
     @include heading-4;
 
